# glance

./: .gitignore  .release-it.json  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  log.txt  pubspec.yaml
.ccls-cache/@Users@littlegnal@codes@personal-project@glance_plugin@glance/: src@collect_stack.cc.blob
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer /: Dockerfile  devcontainer.json
.github/workflows/: prepare-release.yml  pubdev-publishing-manually.yml  pubdev-publishing.yml  release.yml  tests.yml
android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
example/: README.md  build_phase_jank.txt  desymbol.txt  desymbol_all.txt  desymbol_new.txt  jank_trace.json  log.txt  pubspec.yaml  stack_trace.json  stack_trace.txt  vsync_phase_jank.txt
example/android/: build.gradle.kts  settings.gradle.kts
example/glance_integration_test/: _test_runner.dart  build_phase_jank_test.dart  glance_integration_test_runner.dart  jank_app.dart  touch_event_jank_test.dart  vsync_phase_jank_test.dart
example/integration_test/: binding.dart  glance_integration_test.dart  glance_integration_test_main.dart  glance_test.dart  plugin_integration_test.dart
example/lib/: main.dart  timing.txt
example/test/: widget_test.dart
ios/: glance.podspec
lib/: glance.dart  glance_method_channel.dart  glance_platform_interface.dart  test_main.dart
scripts/: check_android15_16k_page_alignment.sh  glance_integration_test.sh  integration_test.sh  write_entitlements.sh
src/: CMakeLists.txt  collect_stack.cc  collect_stack.h  collect_stack_android.cc  collect_stack_ios.cc  stack_collector.cc  stack_collector.h  stack_collector_android.cc  stack_collector_c.h
test/: collect_stack_test.dart  glance_impl_test.dart  glance_method_channel_test.dart  glance_test.dart  sampler_test.dart
(+28 files in other folders)
